# paint-cg

./: .gitignore  CMakeLists.txt  README.md  arquivos.c  arquivos.h  library.h  main.c  objetos.c  objetos.h  selecoes.c  selecoes.h  teste-paint.cbp  teste-paint.depend  teste-paint.layout  teste.depend  transformacoes.c  transformacoes.h
